--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ REACT_APP_GROVE_APPID=""
 REACT_APP_WALLETCONNECT_PROJECT_ID="b402a7eab8617687ce7f1749a7db36f0"
 REACT_APP_ERC20_TOKEN_REPRESENTING_USD_STABLE_COIN_CONTRACT_ADDRESS = "0x216cb9acB601474b2b27ee0BbaFc94c1C7148577"
 REACT_APP_GUESS_CONTRACT_ADDRESS = "0x7E7D21E204A72868dfC4a4D2F9A6e4C6A77Db7d6"
-REACT_APP_SUBDOMAIN = "guess"
+REACT_APP_SUBDOMAIN = ""
 REACT_APP_PUBLIC_URL = "guess"
 
 
